# TradingGuru

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: nifty_momentum_backtest.yaml  param_ranges.yaml
data/universe/: nifty50.json  nifty50_sectors.json
docs/: NIFTY_MOMENTUM.md
scripts/: param_sweep_nifty_momentum.py  run_nifty_momentum_backtest.py
tests/: __init__.py  test_base_strategy.py  test_nifty_pipeline_smoke.py
tradingguru/: __init__.py
tradingguru/core/: __init__.py  base.py  engine.py  risk.py  utils.py
tradingguru/data/: __init__.py  nifty_data_loader.py
tradingguru/features/: __init__.py  nifty_features.py
tradingguru/models/: __init__.py  momentum_nifty.py
